# App_car_control_esp32

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/bluex/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/piper/: README.txt
app/src/main/cpp/: CMakeLists.txt  bluex_piper_jni.cpp
app/src/main/cpp/patches/: espeak-ng-src-CMakeLists.txt
app/src/main/java/com/example/bluex/: BluexViewModel.kt  MainActivity.kt
app/src/main/java/com/example/bluex/bluetooth/: BluetoothRepository.kt
app/src/main/java/com/example/bluex/tts/: FallbackTextToSpeechEngine.kt  GreetingManager.kt  HandleEsp32MessageUseCase.kt  PiperNativeBindings.kt  PiperTtsEngine.kt  RobotAudioPlayer.kt  RobotVoiceStyle.kt  WallEAudioProcessor.kt
app/src/main/java/com/example/bluex/ui/components/: AnimatedConnectionIndicator.kt  GlassCard.kt  JoystickControl.kt
app/src/main/java/com/example/bluex/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/bluex/voice/: VoiceControlManager.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/bluex/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
